Make the tab scrubber speed proportional with the number of tabs

When the number of tabs increases, tab scrubbing speed becomes too fast
that it's very hard to target a specific tab.

This CL makes the speed proportional with the number of tabs.

BUG=678316
TEST=When you add a lot of tabs, tab scrubbing is still easy.

Review-Url: https://codereview.chromium.org/2703373009
Cr-Commit-Position: refs/heads/master@{#452644}